force-app/main/default/objects/XUM_Card__c/XUM_Card__c.object-meta.xml
<CustomObject>
    <description>Permite almacenar información relacionada a tarjetas tomando en cuenta exigida por PCI DSS (Estándar de Seguridad de Datos de la Industria de Tarjetas de Pago)</description>
    <label>Card</label>
    <nameField>
        <label>Card Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>