force-app/main/default/objects/XUM_Card__c/fields/XUM_Account__c.field-meta.xml
<CustomField>
    <fullName>XUM_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cards</relationshipLabel>
    <relationshipName>Cards</relationshipName>
    <type>Lookup</type>
</CustomField>