force-app/main/default/objects/XUM_Card__c/fields/XUM_Brand__c.field-meta.xml
<CustomField>
    <fullName>XUM_Brand__c</fullName>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>XUM_Brand</valueSetName>
    </valueSet>
</CustomField>