force-app/main/default/objects/XUM_Card__c/fields/XUM_ExpMonth__c.field-meta.xml
<CustomField>
    <fullName>XUM_ExpMonth__c</fullName>
    <label>Exp Month</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>