force-app/main/default/objects/XUM_Card__c/fields/XUM_IsDefault__c.field-meta.xml
<CustomField>
    <fullName>XUM_IsDefault__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Default</label>
    <type>Checkbox</type>
</CustomField>