force-app/main/default/objects/XUM_Card__c/fields/XUM_Last4__c.field-meta.xml
<CustomField>
    <fullName>XUM_Last4__c</fullName>
    <label>Last 4 Characters</label>
    <length>4</length>
    <type>Text</type>
</CustomField>