force-app/main/default/objects/XUM_Card__c/fields/XUM_Token__c.field-meta.xml
<CustomField>
    <fullName>XUM_Token__c</fullName>
    <description>token temporal de tarjeta cifrado</description>
    <label>Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>