force-app/main/default/objects/XUM_Card__c/fields/XUM_TokenProvider__c.field-meta.xml
<CustomField>
    <fullName>XUM_TokenProvider__c</fullName>
    <label>Token Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>XUM_TokenProvider</valueSetName>
    </valueSet>
</CustomField>