force-app/main/default/objects/XUM_Card__c/fields/XUM_VaultCustomerId__c.field-meta.xml
<CustomField>
    <fullName>XUM_VaultCustomerId__c</fullName>
    <description>Aqui la información debe ser guardada cifrada</description>
    <label>Vault Customer Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>