force-app/main/default/objects/XUM_Card__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>XUM_Brand__c</columns>
    <columns>XUM_Account__c</columns>
    <columns>XUM_ExpMonth__c</columns>
    <columns>XUM_IsDefault__c</columns>
    <columns>XUM_ExpYear__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>